[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Fonts/DisposableDroidBB.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI/Days.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Days" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -216.0
margin_bottom = -117.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 35.5996 ],
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 9.27035
margin_top = 12.089
margin_right = 73.2703
margin_bottom = 43.089
custom_fonts/font = SubResource( 1 )
text = "Day"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 13.9603
margin_top = 11.5649
margin_right = 77.9602
margin_bottom = 51.565
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade_out" type="Timer" parent="."]
wait_time = 0.15

[node name="Screen_time" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true
[connection signal="timeout" from="Fade_out" to="." method="_on_Fade_out_timeout"]
[connection signal="timeout" from="Screen_time" to="." method="_on_Screen_time_timeout"]
